# calibrate-pro

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  build_installer.bat  calibrate-pro.spec  pyproject.toml
.github/workflows/: ci.yml
calibrate_pro/: __init__.py  __main__.py  app.py  main.py
calibrate_pro/advanced/: __init__.py  ambient_light.py  automation.py  demo.py  lut_optimization.py  network_calibration.py  uniformity.py
calibrate_pro/calibration/: __init__.py  ccss_import.py  hardware_first.py  hybrid.py  multi_display.py  native_loop.py  targets.py
calibrate_pro/community/: database.py
calibrate_pro/core/: __init__.py  aces.py  calibration_engine.py  color_math.py  color_models.py  icc_profile.py  lut_engine.py  lut_engine_advanced.py  vcgt.py
calibrate_pro/display/: __init__.py  color_volume.py  hdr_content.py  hdr_detect.py  oled.py  scrgb_pipeline.py  uniformity.py
calibrate_pro/gui/: __init__.py  app.py  calibration_details.py  calibration_test.py  calibration_wizard.py  dialogs.py  display_selector.py  hdr_calibration.py  icons.py  lut_preview.py  main_window.py  measurement_view.py  pattern_window.py  professional_calibration.py  profile_manager.py  report_viewer.py  theme.py  workers.py
calibrate_pro/hardware/: __init__.py  argyll_backend.py  colorimeter_base.py  ddc_ci.py  drift_compensation.py  hardware_calibration.py  i1d3_native.py  i1display.py  i1display_native.py  measurement.py  native_backend.py  sensorless_calibration.py  spectro.py  spyder.py  spyder_native.py  usb_device.py  warmup_monitor.py
calibrate_pro/hdr/: __init__.py  hdr10plus.py  (+8 more)
docs/: index.html
scripts/: ccmx_calibration_loop.py  ccmx_chroma_adaptive.py  ccmx_verification.py  hybrid_measure.py  native_calibration_loop.py  native_calibration_loop_v2.py  native_colorchecker.py  native_iterative_refine.py  unlock_measure.py  vcgt_measure.py
tests/: conftest.py  test_auto_calibration.py  test_color_math.py  test_hdr_workflow.py  test_lut_engine.py  test_native_loop.py  test_panel_database.py  test_platform.py  test_professional_features.py  test_verification.py
(+77 files in other folders)
