[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calibrate-pro"
version = "1.0.0"
description = "Professional sensorless display calibration"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "quanta-color>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/calibrate-pro"
Repository = "https://github.com/HarperZ9/calibrate-pro"
Issues = "https://github.com/HarperZ9/calibrate-pro/issues"

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7", "quanta-ui>=1.0.0"]
tray = ["pystray>=0.19.4", "Pillow>=10.0,<11"]
sensor = ["hidapi>=0.14,<1"]
macos = ["pyobjc-framework-Quartz>=9.0,<11", "pyobjc-framework-CoreFoundation>=9.0,<11"]
all = ["PyQt6>=6.5,<7", "pystray>=0.19.4", "Pillow>=10.0,<11", "hidapi>=0.14,<1"]

[project.scripts]
calibrate-pro = "calibrate_pro.main:main"

[tool.setuptools.packages.find]
include = ["calibrate_pro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "I",     # isort
]
ignore = ["E501", "E701", "E702", "E741", "B905", "SIM102", "SIM105", "SIM108", "SIM112", "SIM117", "E402", "SIM113", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional in __init__ files

[tool.ruff.format]
quote-style = "double"
